# Raspberry-Pico-Cycle-Computer

./: .gitignore  CMakeLists.txt  main.c
docs/: plan.md  table_schema_design.xlsx
